added notebook intro

--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -30,6 +30,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8e44558",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "Basketball's flashiest plays can often come out of a fast break in transition. In this project, we created a tool that helps teams and coaches visualize how successful a team is in these scenarios, following a defensive rebound. By mapping out how high danger these rebounds are based on quick shots taken after the rebound, players can see how, where, and when to quickly take advantage of regaining possession."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "da755d6d",
    "metadata": {},
    "source": [
