--- a/final_project_notebook.ipynb
+++ b/final_project_notebook.ipynb
@@ -856,11 +856,24 @@
     "plot_conv_init(celt2_danger_df_r, 'Celtics') # plot defensive rebound conversion right half\n",
     "plt.show() # display the scatter plot"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1f38bb8",
+   "metadata": {},
+   "source": [
+    "## Potential Applications and Next Steps\n",
+    "\n",
+    "Ultimately, while this is still a primitive tool, we are hoping that it can be refined into something that those working in the sport can use to determine how to better take advantage of fast breaks. By seeing where rebounds usually lead to danger and where they don’t, as well as where shots usually result from that, will be helpful in strategizing for various scenarios given a defensive rebound is collected. Furthermore, with a larger sample size, we are hoping that a probability functionality can be added to this tool to help teams find out their likelihood of converting quickly on a defensive rebound.\n",
+    "\n",
+    "Visualization, while not a perfect capture of what happens on the court, is a solid middle ground between data and \"eye test\" enthusiasts. Being able to extrapolate specific, detailed parts of a team's performance mapped out in a readable and accessible way is beneficial both to players and to teams, and through this project, we were able to take a question we had and answer it.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.3 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -875,6 +888,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
