added to readme

--- a/final_project_notebook.ipynb
+++ b/final_project_notebook.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "## Dataframe\n",
     "\n",
-    "By collecting and sorting relevant data - types of shots and teams, we can analyze the rebounds and the rebounds that lead to a transition as well as the frequency of these events. "
+    "By collecting and sorting relevant data - types of shots and teams, we can analyze the rebounds and the rebounds that lead to a transition as well as the frequency of these events."
    ]
   },
   {
@@ -214,7 +214,7 @@
    "metadata": {},
    "source": [
     "## High Danger Zones\n",
-    "Given the limited data, we assumed all shots made 10 seconds after a defensive rebounds are considered shots made in transition. Mapping which defensive rebounds lead to a shot or an attempted shot 10 seconds after will determine the danger of each rebound and analyze potential transitions made. "
+    "Given the limited data, we assumed all shots made 10 seconds after a defensive rebounds are considered shots made in transition. Mapping which defensive rebounds lead to a shot or an attempted shot 10 seconds after will determine the danger of each rebound and analyze potential transitions made. A made shot was considered high danger (given the value of 5), a missed shot was considered medium danger (given the value of 4), and a shot not taken was considered low danger (given the value of 3)."
    ]
   },
   {
@@ -866,8 +866,7 @@
     "\n",
     "Ultimately, while this is still a primitive tool, we are hoping that it can be refined into something that those working in the sport can use to determine how to better take advantage of fast breaks. By seeing where rebounds usually lead to danger and where they don’t, as well as where shots usually result from that, will be helpful in strategizing for various scenarios given a defensive rebound is collected. Furthermore, with a larger sample size, we are hoping that a probability functionality can be added to this tool to help teams find out their likelihood of converting quickly on a defensive rebound.\n",
     "\n",
-    "Visualization, while not a perfect capture of what happens on the court, is a solid middle ground between data and \"eye test\" enthusiasts. Being able to extrapolate specific, detailed parts of a team's performance mapped out in a readable and accessible way is beneficial both to players and to teams, and through this project, we were able to take a question we had and answer it.\n",
-    "\n"
+    "Visualization, while not a perfect capture of what happens on the court, is a solid middle ground between data and \"eye test\" enthusiasts. Being able to extrapolate specific, detailed parts of a team's performance mapped out in a readable and accessible way is beneficial both to players and to teams, and through this project, we were able to take a question we had and answer it.\n"
    ]
   }
  ],
