--- a/final_project_notebook.ipynb
+++ b/final_project_notebook.ipynb
@@ -154,9 +154,9 @@
    "source": [
     "Specifying teams and offensive and densive plays.\n",
     "\n",
-    "* queries for offense and defence for each team based on who has possession of the ball given the court side\n",
+    "* queries for offense and defense for each team based on who has possession of the ball given the court side\n",
     "* queries for the team\n",
-    "* queries for the event type - specifically looking at rebounds, and if they lead to shots or no shots in transition"
+    "* queries for the event type - specifically looking at rebounds, and if they lead to shots, missed shots, or no shots in transition"
    ]
   },
   {
@@ -309,12 +309,14 @@
     "## Visualization\n",
     "Displaying the density of rebounds, and mapping the shots that followed for each team in each game.\n",
     "\n",
-    "For each confrence final game, we displayed all defensive rebounds as well as defensive rebounds that lead to transitions for the left and right halves of the court for each team."
+    "For each confrence final game, we displayed all defensive rebounds as well as defensive rebounds that lead to transitions for the left and right halves of the court for each team.\n",
+    "\n",
+    "In each visualization, we are able to observe the danger level of each defensive rebound - 5 for if a shot was made, 4 for if a shot missed and 3 if no shot was taken. Rebounds with danger levels 4 and 5 are then mapped out onto the court to where the shots or attempted shots resulted."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "305f5560",
    "metadata": {},
    "outputs": [],
@@ -577,7 +579,7 @@
    "metadata": {},
    "source": [
     "## Golden State Warriors vs. Dallas Mavericks\n",
-    "In the Western Conference Finals, the Golden State Warriors closed out the series against the Dallas Mavericks in five games"
+    "In the Western Conference Finals, the Golden State Warriors closed out the series against the Dallas Mavericks in five games."
    ]
   },
   {
@@ -872,7 +874,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.3 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
